--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "vitepress dev blog --host 0.0.0.0",
-    "build": "vitepress build blog",
-    "serve": "vitepress serve blog --host 0.0.0.0"
+    "dev": "vitepress dev --host 0.0.0.0",
+    "build": "vitepress build",
+    "serve": "vitepress serve --host 0.0.0.0"
     },
 
   "devDependencies": {
