--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "license": "MIT",
   "scripts": {
     "dev": "vitepress dev --host 0.0.0.0",
+    "start": "npm run dev",
     "build": "vitepress build",
     "serve": "vitepress serve --host 0.0.0.0"
-    },
-
+  },
   "devDependencies": {
     "vitepress": "^1.0.0-alpha.29"
+  },
+  "dependencies": {
+    "markdown-it-table": "^2.0.4"
   }
 }
