--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -24,3 +24,10 @@ jobs:
       run: |
         npm install
         npm run build
+    - name: Deploy
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./public
+        publish_branch: gh-pages
+        full_commit_message: ${{ github.event.head_commit.message }}
