--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -25,9 +25,8 @@ jobs:
         npm install
         npm run build
     - name: Deploy
-      uses: peaceiris/actions-gh-pages@v3
+      uses: JamesIves/github-pages-deploy-action@releases/v3
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./public
-        publish_branch: gh-pages
-        full_commit_message: ${{ github.event.head_commit.message }}
+        BRANCH: gh-pages
+        FOLDER: dist
