--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -1,32 +1,16 @@
-name: NodeJS with Webpack
-
-on:
-  push:
-    branches: [ "master" ]
-
+name: Build and Deploy
+on: [push]
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [14.18.0]
-
     steps:
-    - uses: actions/checkout@v3
-
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-
-    - name: Build
-      run: |
-        npm install
-        npm run build
-    - name: Deploy
-      uses: JamesIves/github-pages-deploy-action@releases/v3
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        BRANCH: gh-pages
-        FOLDER: dist
+    - name: Checkout
+      uses: actions/checkout@master
+    - name: vuepress-deploy
+      uses: jenkey2011/vuepress-deploy@master
+      env:
+        ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+        TARGET_REPO: ingrun/vite-blog
+        TARGET_BRANCH: gh-pages
+        BUILD_SCRIPT: npm i && npm run build
+        BUILD_DIR: dist
