--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,3 +14,4 @@ jobs:
         TARGET_BRANCH: gh-pages
         BUILD_SCRIPT: npm i && npm run build
         BUILD_DIR: dist
+        CNAME: https://vite-blog.ingrun.cn
